# gtfs-tools-team

./: .gitmodules
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AZURE_AD_B2C_SETUP.md  AZURE_AD_SETUP.md  AZURE_KEY_VAULT_SETUP.md  Dockerfile  SECRETS_MANAGEMENT.md  pyproject.toml  start_workers.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_20_0030-001_initial_schema.py  2025_11_20_1306-37f0f0fd6361_add_hashed_password_to_users.py  2025_11_22_0415-dbca6c010ccf_add_gtfs_feed_architecture.py  2025_11_23_0718-b1228715d939_add_delete_feed_task_type.py  2025_11_23_2330-0bffc0250cd8_add_custom_fields_to_gtfs_models.py  2025_11_25_0546-9b720939e61c_add_fareattribute_and_feedinfo_models.py  2025_11_25_0600-66d152b34e85_add_agencyvalidationpreferences_model.py  2025_11_25_0803-c2a98b256291_add_agency_merge_split_audit_actions.py  2025_11_27_0226-01e4e47cf007_add_merge_split_task_types.py  2025_11_27_0349-5d7791b0b787_add_delete_agency_task_type.py  2025_11_27_0717-fa0f147f32eb_add_external_feed_sources.py  2025_11_27_1254-65c7ff5dee82_add_gtfs_realtime_feed_source_types.py  2025_11_28_0502-7ea2d8b8fabd_add_clone_feed_to_tasktype_enum.py  2025_11_30_1718-e2ad235760ae_add_teams_workspaces_and_invitations.py  2025_12_01_2109-ef51befcb7dc_add_realtime_trip_modifications_table.py  2025_12_02_2158-1016627eb9b8_add_feed_permissions_and_update_team_.py  2025_12_02_2217-46b3c6dec493_add_realtime_shapes_and_stops_tables.py  2025_12_04_1500-simplify_team_roles_and_add_workspace_members.py  2025_12_12_1500-9c95d4dfe653_add_gtfs_agency_fields.py  2025_12_12_1800-add_fare_rules_table.py  2025_12_12_2000-convert_to_composite_pks.py  2025_12_14_2100-add_route_continuous_network_fields.py  (+4 more)
backend/app/: __init__.py  celery_app.py  main.py  tasks.py
backend/scripts/: entrypoint.sh  migrate_to_keyvault.py
backend/tests/: test_teams.py
(+186 files in other folders)
